Refactor ReceivingMailbox to use CancellableBlockingQueue for improved error handling and block management